@@ -1,3 +1,9 @@
+Wed Jul 14 10:02:39 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
+
+          Compile fix.
+
 Wed Jul 14 09:55:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
